<resources>
    <string name="app_name">Weather Latam</string>

    <string name="min_temp">Min: %s</string>
    <string name="max_temp">Max: %s</string>
    <string name="pressure">Pressure: %s</string>
    <string name="humidity">Humidity: %s</string>
    <string name="wind_speed">Wind speed: %s</string>
    <string name="sunrise">Sunrise: %s</string>
    <string name="sunset">Sunset: %s</string>
    <string name="unit">Unidades</string>
    <string name="unit_description">Selecciona el tipo de unidad</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>

    <!--Settings-->
    <string name="wind_unit">Wind Speed Unit</string>
    <string name="wind_unit_description">Seleccione la unidad de velocidad</string>
    <string name="settings_temperature_unit">settings_temperature_unit</string>
    <string name="btn_save">guardar</string>
    <string name="cancel">cancelar</string>
    <string name="no_data_available">No hay datos disponibles\n</string>
    <string name="map_icon">Mapa\n</string>
    <string name="weather_icon">Icono del clima\n</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="temp">Temp</string>
    <string name="weather_description">Weather description</string>
    <string name="cities">WeatherLatam</string>
    <string name="settings_wind_speed_unit">Wind Speed Unit</string>
    <string name="meters_per_second">Meters per second (m/s)</string>
    <string name="miles_per_hour">Miles per hour (mph)</string>



</resources>