<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_background"
    android:padding="16dp">

    <!-- Unidad de Temperatura -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="296dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_unit_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            android:text="@string/unit"
            android:textColor="@color/font_default"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_unit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="12dp"
            android:text="@string/unit_description"
            android:textColor="@color/font_default"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_unit_title" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_unit_description">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_metric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layoutDirection="ltr"
                android:text="@string/celsius"
                android:textColor="@color/font_default"
                android:textSize="20sp"
                app:buttonTint="@color/font_default" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_imperial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="ltr"
                android:text="@string/fahrenheit"
                android:textColor="@color/font_default"
                android:textSize="20sp"
                app:buttonTint="@color/font_default" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Unidad de Velocidad del Viento -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_unit_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        tools:ignore="NotSibling">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_wind_unit_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/wind_unit"
            android:textColor="@color/font_default"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_wind_unit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="12dp"
            android:text="@string/wind_unit_description"
            android:textColor="@color/font_default"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/tv_wind_unit_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_wind_unit_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_meters_per_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layoutDirection="ltr"
                android:text="@string/meters_per_second"
                android:textColor="@color/font_default"
                android:textSize="20sp"
                app:buttonTint="@color/font_default" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_miles_per_hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="ltr"
                android:text="@string/miles_per_hour"
                android:textColor="@color/font_default"
                android:textSize="20sp"
                app:buttonTint="@color/font_default" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
